--- a/style3.css
+++ b/style3.css
@@ -1,11 +1,12 @@
 ul{list-style-type: none; margin: 0; padding: 0; overflow: hidden; background-color: #F1E98B; width: 100%}
 li{float: right}
-li a{display: block; padding: 8px; text-decoration: none; color:black; font-family: 'Oswald', sans-serif}
+li a{display: block; padding: 8px; text-decoration: none; color:black; font-family: 'Open Sans', sans-serif; font-size: 15px}
 li a:hover{background-color:white}
 .active{background-color: white}
 
 body{background-color: #DDE5E9}
 
-.box .img1{float:left}
 
-.box .img2{float:right}
+img{float:left; display: inline-block; margin:25px; position: relative; opacity: 1.0;}
+
+img:hover {opacity: .5;}
