--- a/style.css
+++ b/style.css
@@ -1,12 +1,56 @@
-ul{list-style-type: none; margin: 0; padding: 0; overflow: hidden; background-color: #F1E98B}
-li{float: right}
-li a{display: block; padding: 8px; text-decoration: none; color:black; font-family: 'Oswald', sans-serif}
-li a:hover{background-color:white}
+#ul{list-style-type: none; margin: 0; padding: 0; overflow: hidden; background-color: #F1E98B; text-decoration: none; list-style: none}
+#li1{float: right; list-style: none}
+#li1 a{display: block; padding: 8px; text-decoration: none; color:black; font-family: 'Open Sans', sans-serif; font-size: 15px; list-style: none}
+#li1 a:hover{background-color:white; list-style: none}
 .active{background-color: white}
 
-body{
-    background-image:url("perspective%20side%20view.jpg"); background-position: top;
-background-repeat:no-repeat;}
+html, body{margin: 0; padding: 0}
 
-h1{
-    text-align: center; font-family: 'Oswald', sans-serif; font-size: 200px; margin:400px}
+.cb-slideshow, .cb-slideshow:after{position: fixed; width: 100%; height:100%; top: 0px; left:0px; z-index: 0;list-style: none}
+
+.cb-slideshow:after{content: ''; background: transparent url(transparentimage.png) repeat top left}
+
+.cb-slideshow li span{width: 100%; height: 100%; position: absolute; top: 0px; left: 0px; color: transparent; background-size:cover; background-position: 50% 50%; background-repeat: none; opacity: 0; z-index: 0; animation: imageAnimation 36s linear infinite 0s; margin-top: 24px; list-style: none; backface-visibility: visible}
+
+.cb-slideshow li div{z-index: 1000; position: absolute; bottom: 30px; left: 0px; width: 100%; text-align: center; opacity: 0; color: #fff; animation:(titleAnimation 36s linear infinite 0s);list-style: none; backface-visibility: hidden}
+
+.cb-slideshow h1 span{font-family: 'Raleway', sans-serif; font-size: 240px; padding: 0; line-height: 400px; color: black; text-align: center; backface-visibility: hidden; background: rgb(0,0,0); background: rgba(0,0,0,0.7);}
+
+.cb-slideshow li:nth-child(1) span{background-image: url(perspective%20side%20view.jpg)}
+
+.cb-slideshow li:nth-child(2) span{background-image: url(open%20detail%20stairs.jpg);animation-delay: 6s;}
+
+.cb-slideshow li:nth-child(3) span{background-image: url(bone%20study.jpg); animation-delay: 12s;}
+
+.cb-slideshow li:nth-child(4) span{background-image: url(perspective%20side%20view.jpg); animation-delay: 18s}
+
+.cb-slideshow li:nth-child(5) span{background-image: url(open%20detail%20stairs.jpg); animation-delay: 24s}
+
+.cb-slideshow li:nth-child(6) span{background-image: url(bone%20study.jpg); animation-delay: 30s}
+    
+.cb-slideshow li:nth-child (2) div{animation-delay:6s; background-size: auto} 
+
+.cb-slideshow li:nth-child (3) div{animation-delay:12s;}   
+.cb-slideshow li:nth-child (4) div{animation-delay:18s;}   
+.cb-slideshow li:nth-child (5) div{animation-delay:14s;}   
+.cb-slideshow li:nth-child (6) div{animation-delay:30s;} 
+
+@keyframes imageAnimation{
+    0%{opacity: 0; animation-timing-function: ease-in;}
+    8%{opacity: 1; animation-timing-function: ease-out;}
+    17%{opacity: 1}
+    25%{opacity: 0}
+    100%{opacity: 0}
+}
+
+@keyframes imageAnimation{
+    0%{opacity: 0;}
+    8%{opacity: 1;}
+    17%{opacity: 1}
+    25%{opacity: 0}
+    100%{opacity: 0}
+    
+@media screen and (max-width: 1140px) {.cb-slideshow li div h3 {font-size: 140px}}
+    
+@media screen and (max-width: 600px) {.cb-slideshow li div h3{font-size: 80px}}
+    
